[gd_scene load_steps=3 format=2]

[ext_resource path="res://BezierGraph.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="BezierGraph" parent="." instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowLines" type="CheckBox" parent="Control"]
margin_left = 5.0
margin_top = 5.0
margin_right = 150.0
margin_bottom = 29.0
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/ShowLines"]
margin_left = 19.6001
margin_top = 5.82706
margin_right = 136.6
margin_bottom = 19.8271
text = "Show Lines"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screensaver" type="CheckBox" parent="Control"]
margin_left = 5.0
margin_top = 45.0
margin_right = 144.0
margin_bottom = 69.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Screensaver"]
margin_left = 20.0
margin_top = 6.0
margin_right = 137.0
margin_bottom = 20.0
text = "Screensaver Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowNodes" type="CheckBox" parent="Control"]
margin_left = 5.0
margin_top = 25.0
margin_right = 147.0
margin_bottom = 49.0
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/ShowNodes"]
margin_left = 20.0
margin_top = 6.0
margin_right = 137.0
margin_bottom = 20.0
text = "Show Nodes
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowParticles" type="CheckBox" parent="Control"]
margin_left = 5.0
margin_top = 65.0
margin_right = 142.0
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/ShowParticles"]
margin_left = 21.7025
margin_top = 5.81079
margin_right = 76.7025
margin_bottom = 19.8108
text = "Particles"

[node name="Clear" type="Button" parent="Control"]
margin_left = 10.0
margin_top = 93.0
margin_right = 144.0
margin_bottom = 113.0
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurveWidth" type="HSlider" parent="Control"]
margin_left = 5.0
margin_top = 142.0
margin_right = 155.0
margin_bottom = 162.0
min_value = 1.0
max_value = 50.0
value = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/CurveWidth"]
margin_top = -14.0
margin_right = 40.0
text = "Line Width"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurveLifetime" type="HSlider" parent="Control"]
margin_left = 5.0
margin_top = 182.0
margin_right = 155.0
margin_bottom = 202.0
min_value = 0.01
max_value = 30.0
step = 0.1
value = 6.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/CurveLifetime"]
margin_top = -16.0
margin_right = 93.0
margin_bottom = 15.0
text = "Curve Lifetime
"

[node name="tSpeed" type="HSlider" parent="Control"]
margin_left = 5.0
margin_top = 222.0
margin_right = 155.0
margin_bottom = 242.0
min_value = 0.5
max_value = 5.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/tSpeed"]
margin_top = -16.0
margin_right = 93.0
margin_bottom = 15.0
text = "t Speed"

[node name="NodeSpeed" type="HSlider" parent="Control"]
margin_left = 5.0
margin_top = 262.0
margin_right = 155.0
margin_bottom = 282.0
min_value = 25.0
max_value = 200.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/NodeSpeed"]
margin_top = -15.0
margin_right = 40.0
margin_bottom = -1.0
text = "Node Speed"

[connection signal="toggled" from="Control/ShowLines" to="." method="_on_ShowSubdivision_toggled"]
[connection signal="toggled" from="Control/Screensaver" to="." method="_on_Screensaver_toggled"]
[connection signal="toggled" from="Control/ShowNodes" to="." method="_on_ShowNodes_toggled"]
[connection signal="toggled" from="Control/ShowParticles" to="." method="_on_ShowParticles_toggled"]
[connection signal="pressed" from="Control/Clear" to="." method="_on_Clear_pressed"]
[connection signal="value_changed" from="Control/CurveWidth" to="." method="_on_CurveWidth_value_changed"]
[connection signal="value_changed" from="Control/CurveLifetime" to="." method="_on_CurveLifetime_value_changed"]
[connection signal="value_changed" from="Control/tSpeed" to="." method="_on_tSpeed_value_changed"]
[connection signal="value_changed" from="Control/NodeSpeed" to="." method="_on_NodeSpeed_value_changed"]
